--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie-info-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://odianboy.github.io/movie-info/",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^18.0.6",
     "antd": "^4.21.6",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "less": "^4.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
